syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ActivateResponseType";

import "sdc/biceps/abstractsetresponse.proto";

  message ActivateResponse {
    AbstractSetResponse abstract_set_response = 1;
  }
